fix:(dedicated server check); feat:(README update)